done with first assignment. Designed apple page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,186 @@
+<!doctype html>
 <html>
-<head> <title> my page </title> </head>
+<head>
+  <title>Assignment 1</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="css/960_12_col.css" />
+  <link rel="stylesheet" type="text/css" href="css/text.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
+</head>
 <body>
-  <p> ashish </p>
-  <p>royal enfield</p>
-</body>
-</html>
+  <header>
+    <div class="header1">
+   <img src="img/02.png" alt="apple" />
+    <nav >
+       <ul>
+         <li><a href="#"> home </a></li>
+         <li><a href="#"> about us </a></li>
+         <li><a href="#"> services </a></li>
+         <li><a href="#"> contact us </a></li>
+       </ul>
+     </nav>
+   </div>
+   </header>
+   <div class="first container_12">
+     <section class="grid_4 alpha">
+       <img src="img/steve.jpg" alt="steve" />
+       <h5> Steve Jobs</h5>
+       <p>Co-founder, Chairman, and CEO of Apple Inc.
+         Jobs co-founded Apple in 1976 to sell Wozniak's Apple I personal computer.
+         Steven Paul "Steve" Jobs was an American information technology entrepreneur and inventor.
+       </p>
+     </section>
+     <section class="grid_4">
+       <img src="img/images.jpg" alt="woz" />
+        <h5>Steve Wozniak</h5>
+       <p>Stephen Gary "Steve" Wozniak, nicknamed "Woz",
+         is an American inventor, electronics engineer,
+         programmer, and technology entrepreneur who co-founded Apple Inc.
+          Apple II co-developer. He is an is an American computer scientist.
+       </p>
+     </section>
+     <section class="grid_4 omega">
+       <img src="img/ronald.jpg" alt="ronald" />
+        <h5>Ronald Wayne</h5>
+       <p>Ronald Gerald Wayne is a retired American electronics industry worker.
+          He co-founded Apple Computer with Steve Wozniak and Steve Jobs,
+           providing administrative oversight for the new venture.
+3     </section>
+<hr></hr>
+  </div>
+  <div class=" second container_12">
+     <section class="grid_12">
+     <h2><strong> The new iphone 6s.</strong></h2>
+     <p><strong>The Apple iPhone 6s is powered by A9 processor and it comes with 2GB of RAM.</strong></p>
+     <p class="text">Apple inc. ios 10 for Business.</p>
+      <img src="img/8.png" alt="apple" />
+    </section>
+  </div>
+   <div class=" third container_12">
+      <section class="grid_4 alpha">
+        <h4><strong>3D Touch.</strong></h4>
+          <h5><strong>The next generation of Multi-Touch.</strong></h5>
+          <p>iPhone 6s introduces an entirely new way to interact with your phone.
+             For the ﬁrst time, iPhone senses how much pressure you apply to the display.
+              In addition to familiar Multi-﻿Touch gestures like Tap,
+               Swipe and Pinch, 3D Touch introduces Peek and Pop.
+            </p>
+          </section>
+          <section class="grid_4">
+            <h4><strong>4K Camera.</strong></h4>
+              <h5>Lights.Action.</h5>
+                <p>The game-winning shot. The impromptu dance party. Some things are meant for video.
+                  Now you can record those moments in resolution that’s four times higher than HD video.
+                  The first ride without training wheels.. You can zoom in on those 8 million pixels while
+                   you’re shooting or playing your 4K videos.
+                </p>
+            </section>
+            <section class="grid_4 omega">
+              <h4><strong>12MP Photos.</strong></h4>
+                <h5>Introducing Live Photos.</h5>
+                <p>A still photo captures an instant frozen in time.
+                  With Live Photos, you can turn those instants into unforgettable living memories.
+                  At the heart of a Live Photo is a beautiful 12‑megapixel photo.
+                  But together with that photo are the moments just before and after it was taken,
+                  captured with movement and sound.</p>
+                </section>
+                <hr></hr>
+              </div>
+
+
+            <div class="second container_12">
+            <section class="grid_5 alpha">
+              <img src="img/10.jpg" alt="mac" />
+            </section>
+            <section class="grid_7 omega">
+              <div>
+              <h2><strong>MacBook Air<strong></h2>
+              <h5><strong>New fifth-generarion Intel Core Processors.
+                          Thunderbolt 2. Same all-day battery life.
+                        </strong></h5>
+              <p>The 11-inch MacBook Air lasts up to 9 hours between charges
+                and the 13-inch model lasts up to an incredible 12 hours.
+                 So from your morning coffee till your evening commute,
+                 you can work unplugged. When it’s time to kick back and relax,
+                 you can get up to 10 hours of iTunes film playback on the 11-inch
+                 model and up to 12 hours on the 13-inch model. And with up to
+                 30 days of standby time, you can go away for weeks and pick up where you left off.
+               </p>
+               <div>
+               </section>
+               <section class="grid_7 omega">
+                 <div>
+               <h5><strong>Thin.Light.Powerful</strong></h5>
+               <p>Whatever the task, new fifth-generation Intel Core i5 and i7 processors with
+                 Intel HD Graphics 6000 are up to it. From editing photos to browsing the web,
+                 everything happens ultra-fast. And all that power is encased in an incredibly thin
+                 1.7-centimetre unibody design that weighs only 1.08 kilos.
+               </p>
+             </div>
+           </section>
+               <section class="grid_7 omega">
+                 <div>
+               <h5><strong>802.11ac Wi-Fi-support</strong></h5>
+               <h5><strong>The next generation of wireless</strong></h5>
+               <p>With the latest 802.11ac technology, MacBook Air takes Wi-Fi speeds over the top.
+                 Connect to an 802.11ac base station — including AirPort Extreme or AirPort
+                 Time Capsule — and experience wireless performance up to 3x faster
+                 than the previous generation of Wi-Fi. 802.11ac also delivers expanded range,
+                 so you can work more freely than ever.
+               </p>
+             </div>
+             </section>
+             <hr/>
+           </div>
+           <div class="four container_12">
+             <section class="grid_7 alpha">
+               <h2><strong>iPad Pro</strong></h2>
+               <h4><strong>Super.Computer</strong></h4>
+                <h5><strong>Mighty.Small.</strong></h5>
+                <p>The iPad uses an internal rechargeable lithium-ion polymer (LiPo) battery.
+                  The iPad was released with three capacity options for storage: 16, 32, or 64 GB of internal flash memory.
+                  Apple announced a 256 GB model of iPad Pro.
+                </p>
+                <p>There’s more to mini than meets the eye.
+                  he new iPad mini 4 puts uncompromising performance and potential in your hand.
+                  It’s thinner and lighter than ever before,
+                  yet powerful enough to help you take your ideas even further.
+                </p>
+                <h5><strong>Ridiculously light. Seriously thin.</strong></h5>
+                <p>iPad mini 4 puts everything you love about iPad into an incredibly sleek and portable design.
+                  So you can enjoy FaceTime calls with friends or get work done, wherever and whenever you want.
+                  It is so thin it can fit into just about any carry-on, clutch bag or backpack.
+                   It’s the perfect size for everything from entertaining the kids
+                   on a long flight home to identifying constellations from your campsite.
+                 </p>
+                 <h5><strong>Advanced security. Right at your fingertip.</strong></h5>
+                 <p>iPad mini 4 uses Touch ID technology to turn your fingerprint into the perfect unforgettable password.
+                   So you can unlock your device with just one touch and keep your personal data secure,
+                   even if you share your iPad with someone else. Touch ID also lets you
+                    make secure purchases in iTunes and the App Store.
+                 </P>
+               </section>
+                 <section class="grid_5 omega">
+                   <img src="img/21.jpg" alt="ipad" />
+                 </section>
+                 <hr />
+          </div>
+          <footer class="footer">
+            <div>
+              <ul>
+                <li><i class="fa fa-facebook fa-1x" aria-hidden="true"></i></li>
+                <li><i class="fa fa-twitter fa-1x" aria-hidden="true"></i></li>
+                <li><i class="fa fa-google-plus fa-1x" aria-hidden="true"></i></li>
+                <li><i class="fa fa-apple fa-1x" aria-hidden="true"></i></li>
+              </ul>
+              <section class="f1">
+              <p>Phone:(91)991234568</p>
+              <p>Fax:(91)4523146</p>
+              <p>Email: ash@gmail.com</p>
+            </section>
+            </div>
+          </footer>
+ </body>
+ </html>
