added new hero unit image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <img src="img/02.png" alt="apple" />
     <nav >
        <ul>
-         <li><a href="#"> home </a></li>
+         <li><a href="index1.html"> home </a></li>
          <li><a href="#"> about us </a></li>
          <li><a href="#"> services </a></li>
          <li><a href="#"> contact us </a></li>
